--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -539,6 +539,7 @@ img {
 }
 
 .wrapper {
+    width: 1920px;
     max-width: 100%;
     margin: 0 auto;
 }
@@ -548,7 +549,7 @@ img {
 header {
     position: relative;
     width: 100%;
-    height: 100px;
+    height: 20%;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -569,18 +570,83 @@ header {
     margin-right: 85px;
 }
 
-.header__logo{
+.header__logo {
     width: 15%;
     height: 72px;
     margin-left: 5%;
     top: 14px;
 }
 
-/*.header__logo_pic {
-    width: 224px;
-    height: 72px;
-    left: 75px;
-    top: 14px;
-}/*
+
 
 /* Header styles end */
+
+/* Top start */
+
+/*.top__pic {
+    background: url(/img/intro_picture_1.jpg) no-repeat center;
+    position: relative;
+    margin: 0 auto;
+    width: 92%;
+}*/
+.top__form {
+    background: url(/img/intro_picture_1.jpg);
+    position: relative;
+    margin: 0 auto;
+    width: 92%;
+    height: 600px;
+}
+
+.top__title {
+    width: 50%;
+    height: 50%;
+    padding-top: 7%;
+    padding-left: 5%;
+
+}
+
+.top__title-text {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 70px;
+    line-height: 100%;
+    color: white;
+}
+
+.top__subtitle {
+    width: 90%;
+    height: 58px;
+    padding-top: 3%;
+}
+
+.top__subtitle-text {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 29px;
+    color: white
+}
+
+.top__order-button {
+    margin-top: 10%;
+    width: 280px;
+    height: 78px;
+    left: 80px;
+    top: 442px;
+    background: #FF9900;
+    border: 0;
+
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 23.4581px;
+    line-height: 29px;
+    /* identical to box height */
+    text-align: center;
+
+    color: #FFFFFF;
+}
+
+/* Top end */
