--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -643,10 +643,91 @@ header {
     font-weight: 700;
     font-size: 23.4581px;
     line-height: 29px;
-    /* identical to box height */
     text-align: center;
 
     color: #FFFFFF;
 }
 
 /* Top end */
+
+/* About us start */
+
+.information__block {
+    margin-top: 5%;
+}
+
+.about__us-wrap {
+    position: relative;
+    margin: 0 auto;
+    width: 92%;
+    height: 943px;
+
+    border: #000 solid 1px;
+}
+
+.about__us-title {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 59px;
+
+    border: #000 solid 1px;
+    color: #333333;
+}
+
+.about__us-subtitle {
+    border: #000 solid 1px;
+    color: #333333;
+    width: 69%;
+    margin-top: 1%;
+
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 25px;
+}
+
+.more__with_pic {
+    border: #000 solid 1px;
+
+    display: grid;
+    align-items: end;
+    width: 50%;
+    height: 622px;
+}
+
+.more__footer {
+    border: #000 solid 1px;
+
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.more__subtitle {
+    border: #000 solid 1px;
+
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 32px;
+
+    width: 50%;
+   
+}
+
+.more__button {
+
+    width: 175px;
+    height: 60px;
+
+    border: 3px solid #FF9900;
+    
+}
+
+
+/* About us end */
