--- a/Project Evclid/css/style.css
+++ b/Project Evclid/css/style.css
@@ -226,7 +226,9 @@ img {
     margin-bottom: 100px;
 }
 
-.order__button:hover, .order__button:focus, .order__button:active{
+.order__button:hover,
+.order__button:focus,
+.order__button:active {
     background: #e1670E;
 }
 
@@ -239,11 +241,82 @@ img {
     line-height: 59px;
     margin-bottom: 20px;
 }
+
 .about__us-subtitle {
     max-width: 1235px;
     font-weight: 100;
     font-size: 16px;
     line-height: 20px;
     margin-bottom: 50px;
+}
+
+.about__us-cards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 32px;
+}
+
+.about__us-card-pic {
+    position: relative;
+    margin-bottom: 100px;
+}
+
+.about__us-card {
+    display: flex;
+    flex-direction: column;
+}
+
+.about__us-card-footer {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-start;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background: rgba(21, 24, 36, 0.6);
+    max-width: 868px;
+}
+
+.about__us-card-subtitle {
+    max-width: 504px;
+    color: #fff;
+    padding: 50px 50px 50px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 32px;
+}
+
+.about__us-card-button {
+    padding-left: 13%;
+}
+
+.about__us-button {
+    padding: 19px 38px;
+    gap: 10px;
+    max-width: 175px;
+    max-height: 60px;
+    border: none;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    color: #fff;
+    background: #ff9900;
+    border: 0;
+}
+
+.about__us-button:hover,
+.about__us-button:focus,
+.about__us-button:active {
+    background: #e1670E;
+}
+
+.about__us-card-rt{
+    display: grid;
+    grid-template-columns: repeat(2 1fr);
+    grid-gap: 0 50px;
+    align-items: center;
 }
 /* About us end */
