--- a/Project Evclid/css/style.css
+++ b/Project Evclid/css/style.css
@@ -1,120 +1,191 @@
 /* montserrat-100 - cyrillic */
 @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-display: swap;
+    /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 100;
-    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-100.eot'); /* IE9 Compat Modes */
-    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-100.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-100.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-100.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-100.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-100.svg#Montserrat') format('svg'); /* Legacy iOS */
-  }
-  /* montserrat-200 - cyrillic */
-  @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-100.eot');
+    /* IE9 Compat Modes */
+    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-100.eot?#iefix') format('embedded-opentype'),
+        /* IE6-IE8 */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-100.woff2') format('woff2'),
+        /* Super Modern Browsers */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-100.woff') format('woff'),
+        /* Modern Browsers */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-100.ttf') format('truetype'),
+        /* Safari, Android, iOS */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-100.svg#Montserrat') format('svg');
+    /* Legacy iOS */
+}
+
+/* montserrat-200 - cyrillic */
+@font-face {
+    font-display: swap;
+    /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 200;
-    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-200.eot'); /* IE9 Compat Modes */
-    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-200.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-200.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-200.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-200.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-200.svg#Montserrat') format('svg'); /* Legacy iOS */
-  }
-  /* montserrat-300 - cyrillic */
-  @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-200.eot');
+    /* IE9 Compat Modes */
+    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-200.eot?#iefix') format('embedded-opentype'),
+        /* IE6-IE8 */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-200.woff2') format('woff2'),
+        /* Super Modern Browsers */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-200.woff') format('woff'),
+        /* Modern Browsers */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-200.ttf') format('truetype'),
+        /* Safari, Android, iOS */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-200.svg#Montserrat') format('svg');
+    /* Legacy iOS */
+}
+
+/* montserrat-300 - cyrillic */
+@font-face {
+    font-display: swap;
+    /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 300;
-    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-300.eot'); /* IE9 Compat Modes */
-    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-300.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-300.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-300.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-300.svg#Montserrat') format('svg'); /* Legacy iOS */
-  }
-  /* montserrat-regular - cyrillic */
-  @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-300.eot');
+    /* IE9 Compat Modes */
+    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-300.eot?#iefix') format('embedded-opentype'),
+        /* IE6-IE8 */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-300.woff2') format('woff2'),
+        /* Super Modern Browsers */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-300.woff') format('woff'),
+        /* Modern Browsers */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-300.ttf') format('truetype'),
+        /* Safari, Android, iOS */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-300.svg#Montserrat') format('svg');
+    /* Legacy iOS */
+}
+
+/* montserrat-regular - cyrillic */
+@font-face {
+    font-display: swap;
+    /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
-    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-regular.eot'); /* IE9 Compat Modes */
-    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-regular.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-regular.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-regular.svg#Montserrat') format('svg'); /* Legacy iOS */
-  }
-  /* montserrat-500 - cyrillic */
-  @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-regular.eot');
+    /* IE9 Compat Modes */
+    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-regular.eot?#iefix') format('embedded-opentype'),
+        /* IE6-IE8 */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-regular.woff2') format('woff2'),
+        /* Super Modern Browsers */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-regular.woff') format('woff'),
+        /* Modern Browsers */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-regular.ttf') format('truetype'),
+        /* Safari, Android, iOS */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-regular.svg#Montserrat') format('svg');
+    /* Legacy iOS */
+}
+
+/* montserrat-500 - cyrillic */
+@font-face {
+    font-display: swap;
+    /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 500;
-    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-500.eot'); /* IE9 Compat Modes */
-    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-500.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-500.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-500.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-500.svg#Montserrat') format('svg'); /* Legacy iOS */
-  }
-  /* montserrat-600 - cyrillic */
-  @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-500.eot');
+    /* IE9 Compat Modes */
+    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-500.eot?#iefix') format('embedded-opentype'),
+        /* IE6-IE8 */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-500.woff2') format('woff2'),
+        /* Super Modern Browsers */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-500.woff') format('woff'),
+        /* Modern Browsers */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-500.ttf') format('truetype'),
+        /* Safari, Android, iOS */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-500.svg#Montserrat') format('svg');
+    /* Legacy iOS */
+}
+
+/* montserrat-600 - cyrillic */
+@font-face {
+    font-display: swap;
+    /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 600;
-    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-600.eot'); /* IE9 Compat Modes */
-    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-600.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-600.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-600.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-600.svg#Montserrat') format('svg'); /* Legacy iOS */
-  }
-  /* montserrat-700 - cyrillic */
-  @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-600.eot');
+    /* IE9 Compat Modes */
+    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-600.eot?#iefix') format('embedded-opentype'),
+        /* IE6-IE8 */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-600.woff2') format('woff2'),
+        /* Super Modern Browsers */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-600.woff') format('woff'),
+        /* Modern Browsers */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-600.ttf') format('truetype'),
+        /* Safari, Android, iOS */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-600.svg#Montserrat') format('svg');
+    /* Legacy iOS */
+}
+
+/* montserrat-700 - cyrillic */
+@font-face {
+    font-display: swap;
+    /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 700;
-    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-700.eot'); /* IE9 Compat Modes */
-    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-700.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-700.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-700.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-700.svg#Montserrat') format('svg'); /* Legacy iOS */
-  }
-  /* montserrat-800 - cyrillic */
-  @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-700.eot');
+    /* IE9 Compat Modes */
+    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-700.eot?#iefix') format('embedded-opentype'),
+        /* IE6-IE8 */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-700.woff2') format('woff2'),
+        /* Super Modern Browsers */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-700.woff') format('woff'),
+        /* Modern Browsers */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-700.ttf') format('truetype'),
+        /* Safari, Android, iOS */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-700.svg#Montserrat') format('svg');
+    /* Legacy iOS */
+}
+
+/* montserrat-800 - cyrillic */
+@font-face {
+    font-display: swap;
+    /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 800;
-    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-800.eot'); /* IE9 Compat Modes */
-    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-800.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-800.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-800.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-800.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-800.svg#Montserrat') format('svg'); /* Legacy iOS */
-  }
-  /* montserrat-900 - cyrillic */
-  @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-800.eot');
+    /* IE9 Compat Modes */
+    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-800.eot?#iefix') format('embedded-opentype'),
+        /* IE6-IE8 */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-800.woff2') format('woff2'),
+        /* Super Modern Browsers */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-800.woff') format('woff'),
+        /* Modern Browsers */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-800.ttf') format('truetype'),
+        /* Safari, Android, iOS */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-800.svg#Montserrat') format('svg');
+    /* Legacy iOS */
+}
+
+/* montserrat-900 - cyrillic */
+@font-face {
+    font-display: swap;
+    /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 900;
-    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-900.eot'); /* IE9 Compat Modes */
-    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-900.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-900.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-900.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-900.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/cyrillic/montserrat-v25-cyrillic-900.svg#Montserrat') format('svg'); /* Legacy iOS */
-  }
+    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-900.eot');
+    /* IE9 Compat Modes */
+    src: url('../fonts/cyrillic/montserrat-v25-cyrillic-900.eot?#iefix') format('embedded-opentype'),
+        /* IE6-IE8 */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-900.woff2') format('woff2'),
+        /* Super Modern Browsers */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-900.woff') format('woff'),
+        /* Modern Browsers */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-900.ttf') format('truetype'),
+        /* Safari, Android, iOS */
+        url('../fonts/cyrillic/montserrat-v25-cyrillic-900.svg#Montserrat') format('svg');
+    /* Legacy iOS */
+}
 
 html {
     box-sizing: border-box;
@@ -127,7 +198,7 @@ html {
 }
 
 body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Montserrat;
     font-style: normal;
     font-size: 16px;
     line-height: 1.2;
@@ -170,22 +241,22 @@ img {
     width: 60px;
     /* высота элемента */
     height: 60px;
-  }
-  
-  .btn-up::before {
+}
+
+.btn-up::before {
     content: "";
     width: 40px;
     height: 40px;
     background: transparent no-repeat center center;
     background-size: 100% 100%;
     background-image: url(../img/btn-up.png);
-  }
-  
-  .btn-up_hide {
+}
+
+.btn-up_hide {
     display: none;
-  }
-  
- 
+}
+
+
 
 /* Header style start */
 .header {
@@ -708,3 +779,57 @@ footer {
 }
 
 /* Footer end */
+
+@media screen and (max-width: 1440px) {
+    .about__us-subtitle {
+        max-width: 1000px;
+        line-height: 25px;
+    }
+
+
+    .about__us-card-subtitle {
+        max-width: 700px;
+        padding: 10px 50px 20px;
+        line-height: 25px;
+    }
+
+    .about__us-card-button {
+        padding-left: 7%;
+        padding-bottom: 25px;
+    }
+
+    .about__us-button {
+        padding: 10px 20px;
+        font-size: 14px;
+        line-height: 10px;
+    }
+
+    .about__us-card-rt {
+        max-width: 620px;
+        max-height: 226px;
+    }
+
+    .about__us-card-rt-pic {
+        max-width: 135px;
+        margin-right: 45px;
+    }
+
+    .about__us-card-rt-text {
+        padding-left: 20px;
+        padding-top: 25px;
+    }
+
+    .about__us-card-rt-title {
+        font-size: 20px;
+        line-height: 20px;
+        max-width: 350px;
+        margin-bottom: 20px;
+    }
+
+    .about__us-card-rt-subtitle {
+        font-size: 13px;
+        line-height: 25px;
+        max-width: 300px;
+    }
+
+}
